# emede

./: .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  abc.html  package-lock.json  package.json  test.md
.github/workflows/: release.yml
.opencode/plans/: 1781121207193-clever-planet.md
scripts/: install.sh  offline-math-check.mjs
src/: find.js  index.html  keybindings.js  main.js  scroll.js  styles.css  viewstate.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  markdown.rs  pandoc.rs  persist.rs  recents.rs  settings.rs  share.rs  view_state.rs  watcher.rs
src/themes/: catppuccin-mocha.css  dark.css  dracula-dark.css  gruvbox.css  light.css  nord-light.css  sepia.css  things-light.css
