[package]
name = "emede"
version = "0.2.2"
description = "Immersive markdown reader"
authors = ["Jesus Mejia"]
repository = "https://github.com/jmejia8/emede"
edition = "2021"

[lib]
name = "emede_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
comrak = "0.52"
ammonia = "4.1.2"
ureq = "2"
tiny_http = "0.12"
base64 = "0.22"
qrcode = { version = "0.14", features = ["svg"] }
getrandom = "0.3"
subtle = "2.6"
notify = "8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
